[package]
name = "villa"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.74"
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
glam = "0.24.0"
image = "0.24.6"
slab = "0.4.9"
tokio = { version = "1.35.0", features = ["net", "io-util", "macros", "rt", "rt-multi-thread", "sync"] }
wgpu = "0.18.0"
winit = "0.28.6"
zune-inflate = "0.2.54"
